--- a/frontend/src/components/GameShowPage/cartbutton.css
+++ b/frontend/src/components/GameShowPage/cartbutton.css
@@ -76,7 +76,7 @@
   .playBuyButtonBox{
     background: linear-gradient(to right, rgba(188, 187, 187, 0.235)20% ,rgba(84,107,115,.3) 90%);
     border-radius: 4px;
-    margin-top: 2vh;
+    margin-top: 3vw;
     margin-left: 13.7vw;
     width: 45.2vw;
     height: 8vh;
